# seshat

./: Cargo.toml  README.md  Trunk.toml  index.html
css/: material-icons.css  styles.css
localization/: strings.toml
src/: client.rs  components.rs  glue.rs  lang.rs  main.rs  utils.rs
src-schemas/: Cargo.toml
src-schemas/src/: lib.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/server/: errors.rs  mod.rs  routes.rs
src-tauri/src/server/sql/: create.sql
src/sections/: mod.rs  newsale.rs  sellers.rs
