[package]
name = "seshat"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.0"
reqwest = { version = "0.11.18", features = ["json"]}
seed = "0.10.0"
serde = { version = "1.0.166", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
toml = "0.7.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
seshat_schemas = { path="./src-schemas"}
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
