[package]
name = "seshat-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["shoudev"]
license = ""
repository = ""
default-run = "seshat-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
axum = { version = "0.6.18", features = ["headers"] }
log = "0.4.19"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
seshat_schemas = { path="./../src-schemas"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
